--- a/core/camel-core-engine/src/main/docs/modules/eips/pages/sample-eip.adoc
+++ b/core/camel-core-engine/src/main/docs/modules/eips/pages/sample-eip.adoc
@@ -2,17 +2,16 @@
 :doctitle: Sample
 :shortname: sample
 :description: Extract a sample of the messages passing through a route
-:since: 
+:since:
 :supportlevel: Stable
 :tabs-sync-option:
 
 A sampling throttler allows you to extract a sample of the exchanges from the traffic through a route.
 
-image::eip/WireTap.gif[image]
+image::eip/Sample.png[image]
 
-The Sample EIP works similar to a wire tap, but instead of tapping every message, the sampling will
-select a single message in a given time period. This selected message is allowed to pass through,
-and all other messages are stopped.
+The Sample EIP selects a single message in a given time period or every nth message.
+This selected message is allowed to pass through, and all other messages are stopped.
 
 == Options
 // eip options: START
@@ -65,7 +64,7 @@ Java::
 [source,java]
 ----
 from("direct:sample")
-    .sample(5, TimeUnit.SECONDS)
+    .sample(Duration.of(5, ChronoUnit.SECONDS))
     .to("direct:sampled");
 ----
 
@@ -109,3 +108,45 @@ XML::
 </route>
 ----
 ====
+
+=== Sampling with wiretap
+
+The sampling throttler will stop all exchanges not included in the sample. This may be undesirable if you want to
+perform custom processing on the sample while still allowing all 10 messages to flow to an endpoint after the sample EIP.
+
+For this use case, you can combine the sample EIP with wiretap EIP. In the example below, we sample every 10th message
+and send it to direct:sampleProcessing, while all 10 messages are still sent to direct:regularProcessing.
+
+[tabs]
+====
+Java::
++
+[source,java]
+----
+from("direct:start")
+  .wireTap("direct:sample")
+  .to("direct:regularProcessing")
+
+from("direct:sample")
+  .sample(10)
+  .to("direct:sampleProcessing");
+----
+
+XML::
++
+[source,xml]
+----
+<route>
+    <from uri="direct:start"/>
+    <wireTap uri="direct:sample"/>
+    <to uri="direct:regularProcessing"/>
+</route>
+
+<route>
+    <from uri="direct:sample"/>
+    <sample messageFrequency="10"/>
+    <to uri="direct:sampleProcessing"/>
+</route>
+----
+====
+
