CAMEL-22043: camel-smb - Configure path in context-path to be more similar to other file based components

--- a/components/camel-smb/src/main/docs/smb-component.adoc
+++ b/components/camel-smb/src/main/docs/smb-component.adoc
@@ -68,7 +68,7 @@ private void process(Exchange exchange) throws IOException {
 }
 
 public void configure() {
-    fromF("smb:%s/%s?username=%s&password=%s&path=/", service.address(), service.shareName(), service.userName(), service.password())
+    fromF("smb:%s/%s?username=%s&password=%s", service.address(), service.shareName(), service.userName(), service.password())
         .process(this::process)
         .to("mock:result");
 }
@@ -90,7 +90,7 @@ private void process(Exchange exchange) throws IOException {
 }
 
 public void configure() {
-    fromF("smb:%s/%s?username=%s&password=%s&path=/", service.address(), service.shareName(), service.userName(), service.password())
+    fromF("smb:%s/%s?username=%s&password=%s", service.address(), service.shareName(), service.userName(), service.password())
         .process(this::process)
         .to("mock:result");
 }
