--- a/dsl/camel-xml-io-dsl/src/main/docs/java-xml-io-dsl.adoc
+++ b/dsl/camel-xml-io-dsl/src/main/docs/java-xml-io-dsl.adoc
@@ -28,7 +28,7 @@ The following `my-route.xml` source file:
 .my-route.xml
 [source,xml]
 ----
-<routes xmlns="http://camel.apache.org/schema/spring">
+<routes xmlns="http://camel.apache.org/schema/xml-io">
     <route>
         <from uri="timer:tick"/>
         <setBody>
