CAMEL-22064: camel-xml-io - Generate XSD schema

--- a/dsl/camel-xml-io-dsl/src/main/docs/java-xml-io-dsl.adoc
+++ b/dsl/camel-xml-io-dsl/src/main/docs/java-xml-io-dsl.adoc
@@ -291,7 +291,7 @@ You then have to declare those methods in XML DSL as follows:
 ----
 
 The init and destroy methods are optional, so a bean does not have to have both,
-for example you may only have destroy methods.
+for example you may only have a destroy methods.
 
 
 == See Also
